--- a/client/app/main/strategic-planner-details.html
+++ b/client/app/main/strategic-planner-details.html
@@ -1,4 +1,5 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<!-- <div ng-include="'components/navbar/navbar.html'"></div> -->
+<img class="img-responsive img-center ng-scope center-logo" src="assets/images/sensio.png" alt="">
 
 <div id="page-wrapper" style="min-height: 415px">
             <div class="row">
