--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,7 @@
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-route/angular-route.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/Chart.js/Chart.min.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
